# otus_lab5

./: CMakeLists.txt
.github/workflows/: release.yml
src/: document.h  editor.h  elements.cpp  elements.h  header.h  main.cpp
